fix large and unnecessary spacing
happens inside grid-item

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -272,3 +272,7 @@ h2, h3 {
 #learn-how {
     margin-bottom: 20px !important;
 }
+
+.sd-sphinx-override p {
+    margin-bottom: 0px;
+}
